tests-build/tests/fail/macros_invalid_input.stderr
warning: this attribute can only be applied to a `use` item
   --> $DIR/cfg.rs:160:19
    |
160 |               #[doc(inline)]
    |                     ^^^^^^ only applicable on `use` items
    |
   ::: $WORKSPACE/tokio/src/macros/mod.rs
    |
    | / cfg_macros! {
23  | |     #[macro_use]
24  | |     mod select;
    | |     ----------- not a `use` item
25  | |
...   |
30  | |     mod try_join;
31  | | }
    | |_- in this macro invocation
    |
    = note: `#[warn(invalid_doc_attributes)]` on by default
    = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
    = note: for more information, see issue #82730 <https://github.com/rust-lang/rust/issues/82730>
    = note: read https://doc.rust-lang.org/nightly/rustdoc/the-doc-attribute.html#docno_inlinedocinline for more information
    = note: this warning originates in the macro `cfg_macros` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: this attribute can only be applied to a `use` item
   --> $DIR/cfg.rs:160:19
    |
160 |               #[doc(inline)]
    |                     ^^^^^^ only applicable on `use` items
    |
   ::: $WORKSPACE/tokio/src/macros/mod.rs
    |
    | / cfg_macros! {
23  | |     #[macro_use]
24  | |     mod select;
25  | |
26  | |     #[macro_use]
27  | |     mod join;
    | |     --------- not a `use` item
...   |
30  | |     mod try_join;
31  | | }
    | |_- in this macro invocation
    |
    = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
    = note: for more information, see issue #82730 <https://github.com/rust-lang/rust/issues/82730>
    = note: read https://doc.rust-lang.org/nightly/rustdoc/the-doc-attribute.html#docno_inlinedocinline for more information
    = note: this warning originates in the macro `cfg_macros` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: this attribute can only be applied to a `use` item
   --> $DIR/cfg.rs:160:19
    |
160 |               #[doc(inline)]
    |                     ^^^^^^ only applicable on `use` items
    |
   ::: $WORKSPACE/tokio/src/macros/mod.rs
    |
    | / cfg_macros! {
23  | |     #[macro_use]
24  | |     mod select;
25  | |
...   |
30  | |     mod try_join;
    | |     ------------- not a `use` item
31  | | }
    | |_- in this macro invocation
    |
    = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
    = note: for more information, see issue #82730 <https://github.com/rust-lang/rust/issues/82730>
    = note: read https://doc.rust-lang.org/nightly/rustdoc/the-doc-attribute.html#docno_inlinedocinline for more information
    = note: this warning originates in the macro `cfg_macros` (in Nightly builds, run with -Z macro-backtrace for more info)

error: the `async` keyword is missing from the function declaration
 --> $DIR/macros_invalid_input.rs:4:1
  |
4 | fn main_is_not_async() {}
  | ^^

error: Unknown attribute foo is specified; expected one of: `flavor`, `worker_threads`, `start_paused`
 --> $DIR/macros_invalid_input.rs:6:15
  |
6 | #[tokio::main(foo)]
  |               ^^^

error: Must have specified ident
 --> $DIR/macros_invalid_input.rs:9:15
  |
9 | #[tokio::main(threadpool::bar)]
  |               ^^^^^^^^^^^^^^^

error: the `async` keyword is missing from the function declaration
  --> $DIR/macros_invalid_input.rs:13:1
   |
13 | fn test_is_not_async() {}
   | ^^

error: Unknown attribute foo is specified; expected one of: `flavor`, `worker_threads`, `start_paused`
  --> $DIR/macros_invalid_input.rs:15:15
   |
15 | #[tokio::test(foo)]
   |               ^^^

error: Unknown attribute foo is specified; expected one of: `flavor`, `worker_threads`, `start_paused`
  --> $DIR/macros_invalid_input.rs:18:15
   |
18 | #[tokio::test(foo = 123)]
   |               ^^^^^^^^^

error: Failed to parse value of `flavor` as string.
  --> $DIR/macros_invalid_input.rs:21:24
   |
21 | #[tokio::test(flavor = 123)]
   |                        ^^^

error: No such runtime flavor `foo`. The runtime flavors are `current_thread` and `multi_thread`.
  --> $DIR/macros_invalid_input.rs:24:24
   |
24 | #[tokio::test(flavor = "foo")]
   |                        ^^^^^

error: The `start_paused` option requires the `current_thread` runtime flavor. Use `#[tokio::test(flavor = "current_thread")]`
  --> $DIR/macros_invalid_input.rs:27:55
   |
27 | #[tokio::test(flavor = "multi_thread", start_paused = false)]
   |                                                       ^^^^^

error: Failed to parse value of `worker_threads` as integer.
  --> $DIR/macros_invalid_input.rs:30:57
   |
30 | #[tokio::test(flavor = "multi_thread", worker_threads = "foo")]
   |                                                         ^^^^^

error: The `worker_threads` option requires the `multi_thread` runtime flavor. Use `#[tokio::test(flavor = "multi_thread")]`
  --> $DIR/macros_invalid_input.rs:33:59
   |
33 | #[tokio::test(flavor = "current_thread", worker_threads = 4)]
   |                                                           ^

error: second test attribute is supplied
  --> $DIR/macros_invalid_input.rs:37:1
   |
37 | #[test]
   | ^^^^^^^
